# spark-on-kubernetes-recipes

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
benckmarks/: pyproject.toml
benckmarks/operator/: Makefile  apache.kube-burner.yaml  apache.yaml.tmpl  kind.yaml  kubeflow.yaml.tmpl  throughput-result-apache.yaml.tmpl-20250425-001731.csv  throughput-result-apache.yaml.tmpl-20250425-013615.csv
benckmarks/operator/apache/: values.yaml
benckmarks/operator/benchmark/: .gitignore  apache.job.yaml.tmpl  apache.kube-burner.latency.yaml  apache.kube-burner.throughput.yaml  apache.kube-burner.yaml  kubeflow.job.yaml.tmpl  kubeflow.kube-burner.latency.yaml  kubeflow.kube-burner.throughput.yaml  kubeflow.kube-burner.yaml  main.go  results_kubeflow_20250519-232335.csv
benckmarks/operator/kube-prometheus-stack/: pvc.yaml  values.yaml
benckmarks/operator/kubeflow/: defaults.yaml  values.yaml
benckmarks/operator/kwok/: kustomization.yaml  patch.kwok-cm.yaml  patch.kwok-stage-pod-complete.yaml
benckmarks/operator/kwok/fake-nodes/: Chart.yaml  values.yaml
benckmarks/operator/throughput/: apache.yaml.tmpl  kubeflow.yaml.tmpl  main.go
benckmarks/operator/workflows/templates/: job-volcano.yaml
benckmarks/scheduler/kwok/fake-nodes/: values.yaml
benckmarks/tpc/: .gitignore  3_5_5.Dockerfile  Dockerfile  README.md  log4j.properties  selectel.txt  to-s3.sh  to_parquet.py
benckmarks/tpc/nds/: job-4.0.0.yaml  script.py  time.csv
benckmarks/tpc/tpc-ds/: data.sh  log4j.properties  queries.sh
benckmarks/tpc/tpc-h/: data.sh  queries.sh  setup.sh
kind/: README.md  (+2 more)
(+63 files in other folders)
