[project]
name = "spark-on-kubernetes-recipes"
version = "0.1.0"
description = ""
authors = [
    {name = "belo4ya",email = "41exey.kov41ev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn[stats] (>=0.13.2,<0.14.0)",
    "scienceplots (>=2.1.1,<3.0.0)",
    "black[d] (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
