[project]
name = "spark-on-kubernetes-recipes"
version = "0.1.0"
description = ""
authors = [
    {name = "belo4ya",email = "41exey.kov41ev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["black[d] (>=25.1.0,<26.0.0)", "pyspark[connect] (>=4.0.0,<5.0.0)", "jupyter (>=1.1.1,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
